# cubic

./: .gitignore  CMakeLists.txt  Example.cpp  Trajectory.cpp  Trajectory.h  export_EigenNumpy.cpp  package.xml  pycubic_module.cpp  setup.py  testCubic.py
cmake/: FindBoostNumpy.cmake  cubicConfig.cmake.in  trajectoriesConfig.cmake.in
cubic/: __init__.py
include/apc_path/: Path.h  Trajectory.h
